--- a/client/graded-unit/src/index.css
+++ b/client/graded-unit/src/index.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Istok+Web&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 
 
 
